- added reticulate package to imports list
- added Require() for loading/installing pacakages.
- added WriteR updates
- changed VIgrep() and VIsort() to grep.VIgraph() and sort.VIgraph()
- added gsub.VIgraph()

# v0.27.2
- introduced reference to the BrailleR in Action text
- updated vignettes with more direct links to BrailleR in Action

# v0.27.1
- altered DESCRIPTION file to raise Paul and Debra to author from contributor in preparation for pull requests for VI.ggplot() work.
- imported Debra Warren's work <smiles> via a PR on GitHub. This offers huge gains in VI.ggplot()
- changed R dependency sought by CRAN on 29/9/17 by email.
- internalised the R2txt.vars (should have done this ages ago!)
 

# v0.27.0
- added ProcessAllMd() for rendering plain markdown files.
- removed dependency on pander package by altering UniDesc(). Reason: Nice results, but possibly over the top for introductory students.
- added Language to the set of package options to be chosen by the user. This is necessary to then have the SpellCheckFiles() work properly.
- added GetExampleText() to help extract the example text from help pages.




# v0.26.0 for Annabelle
Pushed to CRAN on 6 July 2017

# v0.25.7
- ProcessAllRmd() function added: this processes all Rmd files in the specified folder using either rmarkdown::render() or knitr::knit2html()
- MakeBatch() changed to force Rmd file specific batch file to use rmarkdown::render() instead of knitr::knit2html()
- MakeBatch(file=NULL) now creates ProcessAllRmd.bat file in working directory so that users can process all Rmd files from Windows Explorer or the  DOS command prompt.
- VS offered BrowseSVG() and replacement cacc.js for improved interactive experience; JG fixed for CRAN checks.
- changes from VS merged via GitHub (not to be reported again)
- moved knitr package to imports. This means some of the Rmd files need more explicit mention of the package to get chunk options working properly.